fixed spacing

--- a/style.css
+++ b/style.css
@@ -241,6 +241,6 @@ footer{
     font-size: 15px;
 }
 .project-image img{
-  max-width: 350px;
+  max-width: 320px;
 }
 }
